# build-your-own-moe-router

./: .gitignore  Makefile  README.md  git_commit_each.sh  pyproject.toml
docs/: moe_routing.md
docs/course/: 00-introduction.md  01-moe-first-principles.md  02-configuration.md  03-load-balancing-and-losses.md  04-experts.md  05-routing.md  06-the-moe-layer.md  07-monitoring.md  08-testing.md  09-performance-and-scaling.md  10-capstone.md  README.md
moe/: __init__.py  bench.py  config.py  experts.py  layer.py  losses.py  router.py  utils.py
tests/: __init__.py  conftest.py  test_bench.py  test_config.py  test_experts.py  test_integration.py  test_layer.py  test_losses.py  test_property_based.py  test_router.py  test_utils.py
